# FutureAnalysis

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CRITICAL_AUDIT_FINDINGS.md  CRITICAL_FIXES_SUMMARY.md  DELIVERABLES.md  INIT_AGENT.md  README.md  VOLUME_ANALYSIS_SUMMARY.md  claude.md  coverage.json  data_inventory.csv  organize_data.py  pyproject.toml  report.txt  requirements.txt  run_s1_s2_scripts.py  setup.py  test_results.txt
config/: settings.yaml
docs/: AGENTS.md  CLAUDE.md  CODEBASE_EXPLORATION.md  SESSION_LOG.md
etf_roll_analysis/: __init__.py
metadata/: contracts_metadata.csv
presentation_docs/: Makefile  README.md  analysis_report.tex  analytical_results_report.tex  copper_futures_roll_analysis.tex  report_metrics.json  report_statistics.yaml  seasonality_report.tex  technical_implementation_report.tex  test_report.tex
scripts/: contract_month_analysis.py  export_report_metrics.py  profile_performance.py  roll_transition_audit.py  s1_average_by_bdom.py  s1_eom_intra_month_slope.py  s1_eom_trend.py  s1_overlay.py  s2_average_by_bdom.py  s2_overlay.py  setup_env.sh  spread_average_by_bdom.py  spread_overlay.py  term_structure_detailed_analysis.py  term_structure_plots.py  verify_holidays_hg.py  volume_crossover.py
tests/: __init__.py  test_analysis_session_summary.py  test_bucket.py  test_config.py  test_events.py  test_ingest_panel.py  test_ingest_timestamp.py  test_labeler.py  test_multi_spread_analysis.py  test_panel.py  test_quality.py  test_reporting.py  test_rolls.py  test_spreads.py  test_trading_days.py
(+59 files in other folders)
